--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		]
 	},
 	"dependencies": {
+		"node-fetch": "^3.2.5",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
